--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
@@ -14,4 +17,5 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
+
 }
